--- a/Learning/Todo List Appppp/Todo List Appppp.csproj
+++ b/Learning/Todo List Appppp/Todo List Appppp.csproj
@@ -54,6 +54,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TodoItem.cs" />
+    <Compile Include="TodoV2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TodoV2.Designer.cs">
+      <DependentUpon>TodoV2.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -66,6 +73,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TodoV2.resx">
+      <DependentUpon>TodoV2.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
