--- a/Learning/CarlozInventoryV2/CarlozInventoryV2.csproj
+++ b/Learning/CarlozInventoryV2/CarlozInventoryV2.csproj
@@ -4,29 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B5F2E5D2-4528-4E55-A166-435BBBD33837}</ProjectGuid>
+    <ProjectGuid>{758142DF-C745-456F-84FB-8CDFE3C57876}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Todo_List_Appppp</RootNamespace>
-    <AssemblyName>Todo List Appppp</AssemblyName>
+    <RootNamespace>CarlozInventoryV2</RootNamespace>
+    <AssemblyName>CarlozInventoryV2</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <PublishUrl>C:\Users\Carlos\Desktop\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -61,23 +46,61 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dashboardform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="dashboardform.Designer.cs">
+      <DependentUpon>dashboardform.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TodoItem.cs" />
-    <Compile Include="TodoV2.cs">
+    <Compile Include="logsform.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TodoV2.Designer.cs">
-      <DependentUpon>TodoV2.cs</DependentUpon>
+    <Compile Include="logsform.Designer.cs">
+      <DependentUpon>logsform.cs</DependentUpon>
     </Compile>
+    <Compile Include="productsform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="productsform.Designer.cs">
+      <DependentUpon>productsform.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="settingsform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="settingsform.Designer.cs">
+      <DependentUpon>settingsform.cs</DependentUpon>
+    </Compile>
+    <Compile Include="supplierform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="supplierform.Designer.cs">
+      <DependentUpon>supplierform.cs</DependentUpon>
+    </Compile>
+    <Compile Include="usermanagementform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="usermanagementform.Designer.cs">
+      <DependentUpon>usermanagementform.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="dashboardform.resx">
+      <DependentUpon>dashboardform.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="logsform.resx">
+      <DependentUpon>logsform.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="productsform.resx">
+      <DependentUpon>productsform.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -87,9 +110,16 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="TodoV2.resx">
-      <DependentUpon>TodoV2.cs</DependentUpon>
+    <EmbeddedResource Include="settingsform.resx">
+      <DependentUpon>settingsform.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="supplierform.resx">
+      <DependentUpon>supplierform.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="usermanagementform.resx">
+      <DependentUpon>usermanagementform.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -105,16 +135,25 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
-      <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 and x64%29</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
+    <None Include="Resources\home.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\inventory_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logs.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\products.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\settings.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\supplier.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\users.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
