--- a/Learning/CarlozInventoryV2/CarlozInventoryV2.csproj
+++ b/Learning/CarlozInventoryV2/CarlozInventoryV2.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateEditUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateEditUser.Designer.cs">
+      <DependentUpon>CreateEditUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="dashboardform.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +70,8 @@
     <Compile Include="logsform.Designer.cs">
       <DependentUpon>logsform.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserLevel.cs" />
     <Compile Include="productsform.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +80,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Database.cs" />
+    <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="settingsform.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +100,9 @@
     <Compile Include="usermanagementform.Designer.cs">
       <DependentUpon>usermanagementform.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CreateEditUser.resx">
+      <DependentUpon>CreateEditUser.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="dashboardform.resx">
       <DependentUpon>dashboardform.cs</DependentUpon>
     </EmbeddedResource>
@@ -154,6 +167,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\users.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DB_Queries\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
