--- a/Learning/CarlozInventoryV2/CarlozInventoryV2.csproj
+++ b/Learning/CarlozInventoryV2/CarlozInventoryV2.csproj
@@ -76,12 +76,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="logsform.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="logsform.Designer.cs">
       <DependentUpon>logsform.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Session.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserLevel.cs" />
     <Compile Include="productsform.cs">
@@ -93,6 +100,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Database.cs" />
+    <Compile Include="Models\Login.Cs" />
+    <Compile Include="Repositories\LoginRepository.cs" />
     <Compile Include="Repositories\UserLevelRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="settingsform.cs">
@@ -127,6 +136,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="logsform.resx">
       <DependentUpon>logsform.cs</DependentUpon>
