carloz inventory : update log related things
rename logsrepository to logrepository
add new static class : logrepo for easy input of log
add logs to user actions

--- a/Learning/CarlozInventoryV2/CarlozInventoryV2.csproj
+++ b/Learning/CarlozInventoryV2/CarlozInventoryV2.csproj
@@ -110,7 +110,8 @@
     <Compile Include="Repositories\Database.cs" />
     <Compile Include="Models\Login.Cs" />
     <Compile Include="Repositories\LoginRepository.cs" />
-    <Compile Include="Repositories\LogsRepository.cs" />
+    <Compile Include="Repositories\LogRepo.cs" />
+    <Compile Include="Repositories\LogRepository.cs" />
     <Compile Include="Repositories\SupplierRepository.cs" />
     <Compile Include="Repositories\UserLevelRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
