--- a/Learning/Practices CRUDS_10Times/CRUDV1/CRUDV1.csproj
+++ b/Learning/Practices CRUDS_10Times/CRUDV1/CRUDV1.csproj
@@ -46,6 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateEditProduct.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateEditProduct.Designer.cs">
+      <DependentUpon>CreateEditProduct.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CreateEditUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateEditUser.Designer.cs">
+      <DependentUpon>CreateEditUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +66,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CreateEditProduct.resx">
+      <DependentUpon>CreateEditProduct.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CreateEditUser.resx">
+      <DependentUpon>CreateEditUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -72,9 +93,14 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\" />
+    <Folder Include="Repository\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
