--- a/Learning/Practices CRUDS_10Times/CRUDV1/CRUDV1.csproj
+++ b/Learning/Practices CRUDS_10Times/CRUDV1/CRUDV1.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\ComboItem.cs" />
     <Compile Include="Model\Product.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Program.cs" />
