--- a/Learning/MVP_Pattern/MVP_Pattern.csproj
+++ b/Learning/MVP_Pattern/MVP_Pattern.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{75C57EA5-4356-47D5-B976-E7BCC09EE234}</ProjectGuid>
+    <ProjectGuid>{6B04D3C7-753D-4035-912E-1657222147D9}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>POS_V1</RootNamespace>
-    <AssemblyName>POS_V1</AssemblyName>
+    <RootNamespace>MVP_Pattern</RootNamespace>
+    <AssemblyName>MVP_Pattern</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -44,9 +44,6 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="USB-Barcode-Scanner">
-      <HintPath>C:\Users\Carlos\Downloads\USB-Barcode-Scanner.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form1.cs">
@@ -75,13 +72,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Tables.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
