--- a/Learning/MVP_V1/MVP_V1.csproj
+++ b/Learning/MVP_V1/MVP_V1.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6B04D3C7-753D-4035-912E-1657222147D9}</ProjectGuid>
+    <ProjectGuid>{7EA33B75-688B-425F-99C5-B912BEAEC3B6}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>MVP_Pattern</RootNamespace>
-    <AssemblyName>MVP_Pattern</AssemblyName>
+    <RootNamespace>MVP_V1</RootNamespace>
+    <AssemblyName>MVP_V1</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -34,8 +34,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,14 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\IPetRepository.cs" />
-    <Compile Include="Models\PetModel.cs" />
-    <Compile Include="Presenters\Common\ModelDataValidation.cs" />
-    <Compile Include="Presenters\MainPresenter.cs" />
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modes\Pet.cs" />
+    <Compile Include="Presenters\IPetPresenter.cs" />
     <Compile Include="Presenters\PetPresenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\IMainView.cs" />
     <Compile Include="Views\IPetView.cs" />
     <Compile Include="Views\MainView.cs">
       <SubType>Form</SubType>
@@ -80,9 +81,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Views\MainView.resx">
-      <DependentUpon>MainView.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Views\PetView.resx">
       <DependentUpon>PetView.cs</DependentUpon>
     </EmbeddedResource>
@@ -95,13 +93,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Reference_Images\" />
+    <Folder Include="Presenters\Common\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
