--- a/Learning/MVP_V1/App.config
+++ b/Learning/MVP_V1/App.config
@@ -1,6 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MVP_V1.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <connectionStrings>
+        <add name="SqlConnection" connectionString="Data Source=(local);Initial Catalog=VeterinaryDb;Integrated Security=True;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <MVP_V1.Properties.Settings>
+            <setting name="test" serializeAs="String">
+                <value />
+            </setting>
+        </MVP_V1.Properties.Settings>
+    </userSettings>
 </configuration>
