--- a/Learning/MVP_V1/MVP_V1.csproj
+++ b/Learning/MVP_V1/MVP_V1.csproj
@@ -71,6 +71,7 @@
     </Compile>
     <Compile Include="Models\IPetRepository.cs" />
     <Compile Include="Models\PetModel.cs" />
+    <Compile Include="Presenters\Common\ModelDataValidation.cs" />
     <Compile Include="Presenters\MainPresenter.cs" />
     <Compile Include="Presenters\PetPresenter.cs" />
     <Compile Include="Program.cs" />
@@ -119,9 +120,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Presenters\Common\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
       <Visible>False</Visible>
