--- a/Learning/POS_V1/POS_V1.csproj
+++ b/Learning/POS_V1/POS_V1.csproj
@@ -81,6 +81,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="NOTES.txt" />
     <Content Include="Tables.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
